<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView android:layout_width="match_parent"
              android:layout_height="0dp"
              android:layout_margin="10dp"
              android:layout_weight="1"
              android:gravity="center"
              android:textSize="50dp"
              android:text="@string/game_mode"
            />
    <Button android:layout_width="match_parent"
            android:layout_height="0dp"
            android:onClick="handleButtonOnePlayer"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:layout_gravity="end|center_vertical"
            android:text="@string/single_player"/>
    <Button android:layout_width="match_parent"
            android:layout_height="0dp"
            android:onClick="handleButtonTwoPlayer"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:layout_gravity="end|center_vertical"
            android:text="@string/two_player"/>
</LinearLayout>