<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/position_label"
            android:gravity="center"
            android:textSize="30dp"
            android:text="@string/ship_grid"
            />
    <com.example.Battleship.views.ShipGridGameView
            android:layout_width="fill_parent"
            android:layout_height="440dp"
            android:id="@+id/tracking_grid_game_view"
            />
    <TableLayout android:orientation="vertical"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal">
        <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/player_turn_label"
                    android:textSize="20dp"
                    android:text="@string/player_turn"
                    />
            <TextView
                    android:id="@+id/playerTurn"
                    android:paddingLeft="5dp"
                    android:paddingRight="20dp"
                    android:textSize="20dp"
                    />
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/ships_left_label"
                    android:gravity="center"
                    android:textSize="20dp"
                    android:text="@string/player_ship_count"
                    />
            <TextView
                    android:id="@+id/shipsLeft"
                    android:paddingLeft="10dp"
                    android:paddingRight="0dp"
                    android:textSize="20dp"
                    />
        </TableRow>
    </TableLayout>
    <Button android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/switch_tracking_grid"
            android:onClick="handleButtonSwitchToTrackingGrid"
            />
    <TableLayout android:orientation="vertical"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal">
        <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/last_shot_position"
                    android:textSize="20dp"
                    />
        </TableRow>
        <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/destroyed_ship"
                    android:textSize="20dp"
                    />
        </TableRow>
    </TableLayout>
</LinearLayout>